1	Definition on Home page 	Home	Customer	Ashish Garg	open 2	Stool & Poufs(Spelling)	Home	Customer	Ashish Garg	Fixed 3	We offer a wide range sentence is overlaping 	Home	Customer	Ashish Garg	Invalid 4	Change to Manufacture & Exporter of all home furnishings 	Home	Customer	Ashish Garg	Incomplete 5	Make visible to manufacture & Exporter of home furnishings	Home	Customer	Ashish Garg	Fixed 6	Adjust on Home page Contact us information (mb. +919315470305, +919315601723, Add :Durga Nagar, Hissar Road, Ambala Haryana 134003)	Home	Customer	Ashish Garg	Fixed 7	Use some other images in about us page not that which is used in home page	Home	Customer	Ashish Garg	Fixed 8	About us font 	Home	Customer	Ashish Garg	Fixed 9	Mattter under about us (Font)	Home	Customer	Ashish Garg	Fixed

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -114,20 +114,21 @@ span.about_us {
 }
 
 .address {
-  margin-top: 30px;
-  position: relative;
+  margin-top: 50px;
+  //position: relative;
   overflow: hidden;
   img {
     width: 100%;
   }
   p {
-    color: #666663;
+    color: #FE980F;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-    font-weight: 300;
-    left: 25px;
-    position: absolute;
-    top: 50px;
+    font-weight: 500;
+    text-align: center;
+    //left: 25px;
+    //position: absolute;
+    //top: 50px;
   }
 }
 
