--- a/app/assets/stylesheets/login_page/style.css.scss
+++ b/app/assets/stylesheets/login_page/style.css.scss
@@ -1375,7 +1375,7 @@ figure.effect-apollo:hover figcaption::before {
 /*-- Be-Yourself --*/
 
 .aitsyourself-grid1 {
-	background-image: image-url("about_us/about-image-5.jpg");
+	background-image: image-url("about_us/about-image-19.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
